{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 100,
  "lineage": "e7d2692a-188c-c89d-9bde-b8df0bed667e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0055ee7e27f0385e1",
            "arn": "arn:aws:ec2:us-east-2:460425808712:instance/i-00258b4bdcc0a2e30",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "portpact-dev1-gateway-profile",
            "id": "i-00258b4bdcc0a2e30",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e3f162d44051b02b"
              }
            ],
            "primary_network_interface_id": "eni-0e3f162d44051b02b",
            "private_dns": "ip-10-42-6-235.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.6.235",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02e6247c517d4e756",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d237aa0a25bea78b",
            "tags": {
              "Name": "portpact-dev1-gateway",
              "Project": "portpact-dev1",
              "portpact:gateway": "true"
            },
            "tags_all": {
              "Name": "portpact-dev1-gateway",
              "Project": "portpact-dev1",
              "portpact:gateway": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04a5336da2f5a03d4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460425808712",
            "id": "i-00258b4bdcc0a2e30",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_iam_instance_profile.gateway",
            "aws_iam_role.gateway",
            "aws_security_group.endpoints",
            "aws_security_group.gateway",
            "aws_subnet.private",
            "aws_vpc.this",
            "aws_vpc_endpoint.ec2messages",
            "aws_vpc_endpoint.ssm",
            "aws_vpc_endpoint.ssmmessages",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:460425808712:route-table/rtb-0e590efefaaf96725",
            "id": "rtb-0e590efefaaf96725",
            "owner_id": "460425808712",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Name": "portpact-dev1-private-rt",
              "Project": "portpact-dev1"
            },
            "tags_all": {
              "Name": "portpact-dev1-private-rt",
              "Project": "portpact-dev1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0992e62599529b0e8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460425808712",
            "id": "rtb-0e590efefaaf96725",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d05bc1e0f9c34087",
            "region": "us-east-2",
            "route_table_id": "rtb-0e590efefaaf96725",
            "subnet_id": "subnet-0d237aa0a25bea78b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090af6091a4a9e98d",
            "region": "us-east-2",
            "route_table_id": "rtb-0e590efefaaf96725",
            "subnet_id": "subnet-0a60bc95f2970ab3b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:460425808712:security-group/sg-0c62e79f188968303",
            "description": "Interface endpoints SG (SSM)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c62e79f188968303",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS from gateway",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04a5336da2f5a03d4"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "portpact-dev1-endpoints-sg",
            "name_prefix": "",
            "owner_id": "460425808712",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "portpact-dev1-endpoints-sg",
              "Project": "portpact-dev1"
            },
            "tags_all": {
              "Name": "portpact-dev1-endpoints-sg",
              "Project": "portpact-dev1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0992e62599529b0e8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460425808712",
            "id": "sg-0c62e79f188968303",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.gateway",
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:460425808712:security-group/sg-04a5336da2f5a03d4",
            "description": "Portpact SSM gateway SG",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Gateway to RDS Postgres 5432",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09768f0d5b0404c1c"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Gateway to SSM endpoints 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c62e79f188968303"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-04a5336da2f5a03d4",
            "ingress": [],
            "name": "portpact-dev1-gateway-sg",
            "name_prefix": "",
            "owner_id": "460425808712",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "portpact-dev1-gateway-sg",
              "Project": "portpact-dev1"
            },
            "tags_all": {
              "Name": "portpact-dev1-gateway-sg",
              "Project": "portpact-dev1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0992e62599529b0e8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460425808712",
            "id": "sg-04a5336da2f5a03d4",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:460425808712:security-group/sg-09768f0d5b0404c1c",
            "description": "Portpact RDS Postgres SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09768f0d5b0404c1c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from gateway",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04a5336da2f5a03d4"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "portpact-dev1-rds-sg",
            "name_prefix": "",
            "owner_id": "460425808712",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "portpact-dev1-rds-sg",
              "Project": "portpact-dev1"
            },
            "tags_all": {
              "Name": "portpact-dev1-rds-sg",
              "Project": "portpact-dev1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0992e62599529b0e8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460425808712",
            "id": "sg-09768f0d5b0404c1c",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.gateway",
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "gateway_to_endpoints_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Gateway to SSM endpoints 443",
            "from_port": 443,
            "id": "sgrule-1654254483",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-04a5336da2f5a03d4",
            "security_group_rule_id": "sgr-0f87ed672f72e0f23",
            "self": false,
            "source_security_group_id": "sg-0c62e79f188968303",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_security_group.gateway",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "gateway_to_rds_5432",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Gateway to RDS Postgres 5432",
            "from_port": 5432,
            "id": "sgrule-555949093",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-04a5336da2f5a03d4",
            "security_group_rule_id": "sgr-091abc6aebe99746b",
            "self": false,
            "source_security_group_id": "sg-09768f0d5b0404c1c",
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gateway",
            "aws_security_group.rds",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:460425808712:subnet/subnet-0d237aa0a25bea78b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.42.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d237aa0a25bea78b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "460425808712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "portpact-dev1-private-us-east-2a",
              "Project": "portpact-dev1",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "portpact-dev1-private-us-east-2a",
              "Project": "portpact-dev1",
              "Tier": "private"
            },
            "vpc_id": "vpc-0992e62599529b0e8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460425808712",
            "id": "subnet-0d237aa0a25bea78b",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:460425808712:subnet/subnet-0a60bc95f2970ab3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.42.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a60bc95f2970ab3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "460425808712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "portpact-dev1-private-us-east-2b",
              "Project": "portpact-dev1",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "portpact-dev1-private-us-east-2b",
              "Project": "portpact-dev1",
              "Tier": "private"
            },
            "vpc_id": "vpc-0992e62599529b0e8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460425808712",
            "id": "subnet-0a60bc95f2970ab3b",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:460425808712:vpc/vpc-0992e62599529b0e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.42.0.0/16",
            "default_network_acl_id": "acl-0269d3899a154d3e4",
            "default_route_table_id": "rtb-0b22bdba92aa57464",
            "default_security_group_id": "sg-01193340e93099977",
            "dhcp_options_id": "dopt-0486eea73b373230d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0992e62599529b0e8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b22bdba92aa57464",
            "owner_id": "460425808712",
            "region": "us-east-2",
            "tags": {
              "Name": "portpact-dev1-vpc",
              "Project": "portpact-dev1"
            },
            "tags_all": {
              "Name": "portpact-dev1-vpc",
              "Project": "portpact-dev1"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460425808712",
            "id": "vpc-0992e62599529b0e8",
            "region": "us-east-2"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:460425808712:vpc-endpoint/vpce-011569197c0037aa6",
            "dns_entry": [
              {
                "dns_name": "vpce-011569197c0037aa6-mdyutxpf.ec2messages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-011569197c0037aa6-mdyutxpf-us-east-2a.ec2messages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-011569197c0037aa6-mdyutxpf-us-east-2b.ec2messages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "ec2messages.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z01423022AI6GWT7RCZUJ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-011569197c0037aa6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00d20e69757d80c5e",
              "eni-068c1a5bcb616b250"
            ],
            "owner_id": "460425808712",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c62e79f188968303"
            ],
            "service_name": "com.amazonaws.us-east-2.ec2messages",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.42.1.134",
                "subnet_id": "subnet-0d237aa0a25bea78b"
              },
              {
                "ipv4": "10.42.20.149",
                "subnet_id": "subnet-0a60bc95f2970ab3b"
              }
            ],
            "subnet_ids": [
              "subnet-0a60bc95f2970ab3b",
              "subnet-0d237aa0a25bea78b"
            ],
            "tags": {
              "Name": "portpact-dev1-ec2messages",
              "Project": "portpact-dev1"
            },
            "tags_all": {
              "Name": "portpact-dev1-ec2messages",
              "Project": "portpact-dev1"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0992e62599529b0e8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460425808712",
            "id": "vpce-011569197c0037aa6",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_security_group.gateway",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:460425808712:vpc-endpoint/vpce-0b6dbcbae0687daf6",
            "dns_entry": [
              {
                "dns_name": "vpce-0b6dbcbae0687daf6-t1b1cpv0.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0b6dbcbae0687daf6-t1b1cpv0-us-east-2b.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0b6dbcbae0687daf6-t1b1cpv0-us-east-2a.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "ssm.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z10174713713S6AJ5GBD"
              },
              {
                "dns_name": "ssm.us-east-2.api.aws",
                "hosted_zone_id": "Z00439512IDSV1OGHTNLE"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b6dbcbae0687daf6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00d39c77534249a16",
              "eni-0160f44b2cfe66cad"
            ],
            "owner_id": "460425808712",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c62e79f188968303"
            ],
            "service_name": "com.amazonaws.us-east-2.ssm",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.42.13.219",
                "subnet_id": "subnet-0d237aa0a25bea78b"
              },
              {
                "ipv4": "10.42.21.187",
                "subnet_id": "subnet-0a60bc95f2970ab3b"
              }
            ],
            "subnet_ids": [
              "subnet-0a60bc95f2970ab3b",
              "subnet-0d237aa0a25bea78b"
            ],
            "tags": {
              "Name": "portpact-dev1-ssm",
              "Project": "portpact-dev1"
            },
            "tags_all": {
              "Name": "portpact-dev1-ssm",
              "Project": "portpact-dev1"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0992e62599529b0e8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460425808712",
            "id": "vpce-0b6dbcbae0687daf6",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_security_group.gateway",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:460425808712:vpc-endpoint/vpce-014c1cb316f9ce6b8",
            "dns_entry": [
              {
                "dns_name": "vpce-014c1cb316f9ce6b8-l442hyzk.ssmmessages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-014c1cb316f9ce6b8-l442hyzk-us-east-2a.ssmmessages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-014c1cb316f9ce6b8-l442hyzk-us-east-2b.ssmmessages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "ssmmessages.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z00438822U7NS1DLEWBOC"
              },
              {
                "dns_name": "ssmmessages.us-east-2.api.aws",
                "hosted_zone_id": "Z00438813B7LUPCILG7C8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-014c1cb316f9ce6b8",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01a4527f943ffaeb0",
              "eni-0ccc1e21a7a68d06d"
            ],
            "owner_id": "460425808712",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c62e79f188968303"
            ],
            "service_name": "com.amazonaws.us-east-2.ssmmessages",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.42.14.56",
                "subnet_id": "subnet-0d237aa0a25bea78b"
              },
              {
                "ipv4": "10.42.20.183",
                "subnet_id": "subnet-0a60bc95f2970ab3b"
              }
            ],
            "subnet_ids": [
              "subnet-0a60bc95f2970ab3b",
              "subnet-0d237aa0a25bea78b"
            ],
            "tags": {
              "Name": "portpact-dev1-ssmmessages",
              "Project": "portpact-dev1"
            },
            "tags_all": {
              "Name": "portpact-dev1-ssmmessages",
              "Project": "portpact-dev1"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0992e62599529b0e8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "460425808712",
            "id": "vpce-014c1cb316f9ce6b8",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_security_group.gateway",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}